// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 cUrkoG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 cUrkoG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 hISQaY flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 hFvZjk flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 cUrkoG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 gaiRek flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 ekVStG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 kOylqR flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 larnSN flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <div>
    <span
      class="Badge__Wrapper-sc-1d7juq8-0 kZCtyH flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
    >
      <div
        class="sc-gsTCUz cmyhNZ"
        height="12"
        width="12"
      />
      <span />
    </span>
  </div>
</div>
`;
